--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Kakose Golf Mobile Application API",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/samlovescoding/kakose-backend/issues"
   },
-  "homepage": "https://github.com/samlovescoding/kakose-backend#readme"
+  "homepage": "https://github.com/samlovescoding/kakose-backend#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.6",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4"
+  }
 }
