Added Auth and Members

--- a/.sample.env
+++ b/.sample.env
@@ -3,3 +3,6 @@ APP_MODE="production"
 
 # Paste MongoDB Connection string here. You can easily get one from mongodb.com
 MONGO_URI="connection-string-here"
+
+#JWT Secrey Key
+JWT_SECRET="secret"
