--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Kakose Golf Mobile Application API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon .",
+    "start": "node .",
+    "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,10 +23,13 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
