Added products, orders and updated error io to handle arrays

--- a/.sample.env
+++ b/.sample.env
@@ -1,11 +1,18 @@
-# Change to development for local deployment
+# Change to development for local deployment (production/development)
 APP_MODE="production"
 
-# Paste MongoDB Connection string here. You can easily get one from mongodb.com
+# Port for the API
+PORT=4000
+
+# MongoDB Connection String (Get one from mongodb.com)
 MONGO_URI="connection-string-here"
 
-#JWT Secrey Key
+# JWT Secret Key (Recommended atleast 32 characters long.)
 JWT_SECRET="secret"
 
-#Port for the API
-PORT=4000
+# JWT Secret Key For Admin Panel Users (Recommended atleast 32 characters long.)
+JWT_SECRET_ADMIN="secret2"
+
+# Stripe Payment Gateway Details
+STRIPE_API_TOKEN=""
+STRIPE_SECRET=""
