--- a/.sample.env
+++ b/.sample.env
@@ -1,6 +1,9 @@
 # Change to development for local deployment (production/development)
 APP_MODE="production"
 
+# API URL (with trailing slash)
+URL="http://localhost:4000/"
+
 # Port for the API
 PORT=4000
 
